ubuntu-mate-welcome (17.10.14) UNRELEASED; urgency=medium

  * Update OpenRazer for Artful.
  * Update Déjà Dup launch command for Artful.
  * Fix Geany plugins install.

 -- Martin Wimpress <martin@ubuntu-mate.org>  Mon, 04 Sep 2017 22:32:03 +0100

ubuntu-mate-welcome (17.10.13) artful; urgency=medium

  * Update Recenct Notifications so it is only available for Xenial.
  * Update MakeMKV and OBS for Artful.
  * Add Wavebox.

 -- Martin Wimpress <martin@ubuntu-mate.org>  Mon, 04 Sep 2017 21:23:25 +0100

ubuntu-mate-welcome (17.10.12) artful; urgency=medium

  * Ensure WebKit JS operations are thread-safe.
  * Update Google Earth.
  * Update X2Go for Artful.

 -- Martin Wimpress <martin@ubuntu-mate.org>  Tue, 29 Aug 2017 13:57:52 +0100

ubuntu-mate-welcome (17.10.11) artful; urgency=medium

  * Update Aptik, Recent Notifications, Subsurface and uGet for Artful.

 -- Martin Wimpress <martin@ubuntu-mate.org>  Mon, 28 Aug 2017 01:03:06 +0100

ubuntu-mate-welcome (17.10.10) artful; urgency=medium

  * Update artwork and branding for Artful.

 -- Martin Wimpress <martin@ubuntu-mate.org>  Wed, 23 Aug 2017 22:17:21 +0100

ubuntu-mate-welcome (17.10.9) artful; urgency=medium

  * Remove threading to prevent segfaults at startup. (LP: #1710150)
  * Add Super and Alt documentation to Getting Started.

 -- Martin Wimpress <martin@ubuntu-mate.org>  Tue, 22 Aug 2017 11:52:00 +0100

ubuntu-mate-welcome (17.10.8) artful; urgency=medium

  * Update Diodon, GNS3, OBS, RetroArch, Shotwell, TeXworks for Artful.

 -- Martin Wimpress <martin@ubuntu-mate.org>  Thu, 17 Aug 2017 02:34:53 +0100

ubuntu-mate-welcome (17.10.7) artful; urgency=medium

  * Update 0 A.D and Caffeine for Zesty.
  * Update Ambient Noise for Zesty and Artful.
  * Update Atom, Brackets, Brave, LibreOffice, Luminance-HDR, Nextcloud
    Client, Peek, Play on Linux, Polychromatic, Razer Drivers, Solaar
    and Veracrypt for Artful.

 -- Martin Wimpress <martin@ubuntu-mate.org>  Tue, 20 Jun 2017 10:32:47 +0100
