@@ -2,7 +2,8 @@
     "17.10.14": {
         "fix": {
             "openrazer": "new-source",
-            "geany": "general"
+            "geany": "general",
+            "audio-recorder": "new-source"
         }
     },
     "17.10.13": {
