@@ -1,5 +1,6 @@
 ubuntu-mate-welcome (17.10.14) UNRELEASED; urgency=medium
 
+  * Add Audio Record for Artful.
   * Update OpenRazer for Artful.
   * Update Déjà Dup launch command for Artful.
   * Fix Geany plugins install.
